# ai-engineering-from-scratch

./: ROADMAP.md  agno_sessions.db  package-lock.json  pyproject.toml
phases/11-llm-engineering/01-prompt-engineering/code/: prompt_engineering.py
phases/11-llm-engineering/02-few-shot-cot/: gsm8k_10.json  gsm8k_formatted.json
phases/11-llm-engineering/02-few-shot-cot/code/: advanced_prompting.py  ex.py
phases/11-llm-engineering/04-embeddings/code/: embeddings.py  ex.py  excercise.py
phases/11-llm-engineering/05-context-engineering/code/: main.py  utils.py
phases/11-llm-engineering/06-rag/code/: 1.py  conversation.py
phases/11-llm-engineering/07-advanced-rag/code/: excercise.py
phases/11-llm-engineering/09-function-calling/code/: function_calling.py
phases/11-llm-engineering/10-evaluation/code/: eval_framework.py
phases/11-llm-engineering/11-caching-cost/code/: caching_cost.py
phases/11-llm-engineering/12-guardrails/code/: guardrails.py
phases/11-llm-engineering/13-production-app/code/: production_app.py
phases/11-llm-engineering/14-model-context-protocol/code/: main.py  main3.py
phases/11-llm-engineering/15-prompt-caching/code/: excercise.py  harness.py  main.py  optimizer.py
phases/11-llm-engineering/16-langgraph-state-machines/code/: main.py  supervisor.py
phases/11-llm-engineering/17-agent-framework-tradeoffs/code/: agno_ex.py  autogen_ex.py  crewai_ex.py  langgraph_ex.py
phases/13-tools-and-protocols/01-the-tool-interface/code/: main.py  utils.py
phases/13-tools-and-protocols/02-function-calling-deep-dive/code/: main.py
(+30 files in other folders)
