[project]
name = "ai-engineering-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=1.4.8",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.7",
    "mcp>=1.28.1",
    "sentence-transformers>=5.5.1",
]
