[project]
name = "ai-engineering-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ag2[ollama]>=0.14.0",
    "agno>=2.6.22",
    "autogen>=0.14.1",
    "crewai>=1.6.1",
    "langchain-anthropic>=1.4.8",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.7",
    "litellm>=1.91.0",
    "mcp>=1.28.1",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.51",
]
